--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--Isaac Silva 2E -->
+<!--Isaac Silva 2E 29/08/2025-->
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -162,4 +162,5 @@
 
 
 </html>
+
 
